# entity-api

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.py  docker-compose.yml  pyproject.toml  requirements.txt  stress_test.py
app/: __init__.py  env.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  attention.py  batch_processor.py  model.py
app/utils/: __init__.py  patterns.py  text.py
benchmark/: predict_100concurrency.json  predict_10concurrency.json  predict_200concurrency.json  predict_50concurrency.json
examples/: test.ipynb
flash_infer_encoder_non_causal/: __init__.py  env.py  main.py  parameters.py
test/: __init__.py  conftest.py  test_api.py  test_attention.py  test_batch_processor.py  test_bpe_merging.py  test_env.py  test_integration.py  test_main.py  test_model.py  test_regex_entities.py  test_routes.py  test_utils.py  test_varlen_batching.py
