[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entity-api"
version = "0.1.0"
description = "Continuous batching API for encoder models using FlashInfer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Malaysia AI", email = "mesolitica@gmail.com"}
]
keywords = ["nlp", "ner", "entity-extraction", "flashinfer", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "accelerate>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "aiohttp",
]

[project.urls]
"Homepage" = "https://github.com/malaysia-ai/entity-api"
"Bug Tracker" = "https://github.com/malaysia-ai/entity-api/issues"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
addopts = "-v"
markers = [
    "integration: mark test as integration test (requires model loading)",
]
